# herebedragons-rs

./: Cargo.toml
dragons/: Cargo.toml
dragons/src/: app.rs  clock.rs  frame_counter.rs  hresult.rs  main.rs  renderer.rs  scene.rs
dragons/src/assets/: mod.rs
dragons/src/ecs/: camera.rs  mesh.rs  mod.rs  player.rs  transform.rs
dragons/src/entity/: mod.rs
dragons/src/gfx/: mod.rs
dragons/src/gfx/backend_d3d12/: memory.rs  mod.rs  swapchain.rs
dragons/src/gfx/gl/: mod.rs
dragons/src/gl_utils/: mesh.rs  mod.rs  primitives.rs
herebedragons-d3d12/: Cargo.toml
herebedragons-d3d12/src/: error.rs  main.rs  renderer.rs
herebedragons-d3d12/src/gfx/: mod.rs
herebedragons-d3d12/src/gfx/backend_d3d12/: adapter.rs  device.rs  factory.rs  fence.rs  instance.rs  memory.rs  mod.rs  queue.rs
resources/: scene.ron
resources/shaders/: shader.wgsl
