[package]
name = "dragons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
d3d12 = { version = "0.5", features = ["libloading"] }
derive_more = "0.99"
dotenv = "0.15"
env_logger = "0.9"
image = { version = "0.24", default-features = false, features = ["png"] }
log = "0.4"
raw-window-handle = "0.5"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
tobj = "3"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "fs", "macros"] }
winapi = "0.3"
windows = "0.43"
winit = "0.27"