[package]
name = "dragons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gl"]
gl = ["dep:gl", "dep:glutin", "dep:glutin-winit"]

[dependencies]
anyhow = "1"
derive_more = "0.99"
dotenv = "0.15"
env_logger = "0.10"
gl = { version = "0.14", optional = true }
glutin = { version = "0.30", optional = true }
glutin-winit = { version = "0.2", optional = true }
image = { version = "0.24", default-features = false, features = ["png"] }
log = "0.4"
nalgebra = "0.31"
raw-window-handle = "0.5"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
tobj = "3"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "fs", "macros"] }
windows = "0.43"
winit = "0.27"