[package]
name = "dragons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-executor = "1"
bytemuck = { version = "1", features = ["derive"] }
dotenv = "0.15"
env_logger = "0.10"
glam = "0.22"
hecs = "0.9"
image = { version = "0.24", default-features = false, features = ["png"] }
log = "0.4"
raw-window-handle = "0.5"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tobj = "3"
wgpu = "0.14"
winit = "0.27"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.14", features = ["webgl"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.2"