[package]
name = "herebedragons-d3d12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
log = "0.4"
env_logger = "0.9"
derive_more = "0.99"
winit = "0.27"
d3d12 = { version = "0.5", features = ["libloading"] }
winapi = "0.3"
windows = "0.39"